@@ -105,3 +105,26 @@ void KinoPoiskFetcherTest::testTop() {
   QVERIFY(!entry->field("cover").isEmpty());
   QVERIFY(!entry->field(QStringLiteral("cover")).contains(QLatin1Char('/')));
 }
+
+// Ликвидация is a TV series
+void KinoPoiskFetcherTest::testBug403185() {
+  Tellico::Fetch::FetchRequest request(Tellico::Data::Collection::Video, Tellico::Fetch::Title, QStringLiteral("Ликвидация"));
+  Tellico::Fetch::Fetcher::Ptr fetcher(new Tellico::Fetch::KinoPoiskFetcher(this));
+
+  Tellico::Data::EntryList results = DO_FETCH1(fetcher, request, 1);
+
+  QCOMPARE(results.size(), 1);
+
+  // the first entry had better be the right one
+  Tellico::Data::EntryPtr entry = results.at(0);
+
+  QCOMPARE(entry->field("title"), QString::fromUtf8("Ликвидация"));
+  QCOMPARE(entry->field("year"), QStringLiteral("2007"));
+  QCOMPARE(entry->field("nationality"), QString::fromUtf8("Россия"));
+  QCOMPARE(entry->field("director"), QString::fromUtf8("Сергей Урсуляк"));
+  QCOMPARE(entry->field("producer"), QString::fromUtf8("Сергей Даниелян; Рубен Дишдишян; Алексей Кузнецов"));
+  QCOMPARE(entry->field("genre"), QString::fromUtf8("детектив; криминал; триллер; драма"));
+  QVERIFY(!entry->field("plot").isEmpty());
+  QVERIFY(!entry->field("cover").isEmpty());
+  QVERIFY(!entry->field(QStringLiteral("cover")).contains(QLatin1Char('/')));
+}
