@@ -36,6 +36,7 @@ private Q_SLOTS:
   void initTestCase();
   void testSuperman();
   void testTop();
+  void testBug403185();
 };
 
 #endif
